syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc AuthenticationRegister (AuthenticationRegisterRequest) returns (AuthenticationRegisterResponse) {}
  rpc AuthenticationLogin (AuthenticationLoginRequest) returns (AuthenticationLoginResponse) {}
  rpc AuthenticationValidate (AuthenticationValidateRequest) returns (AuthenticationValidateResponse) {}
}

// Register

message AuthenticationRegisterRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationRegisterResponse {
  int32 status = 1;
  repeated string error = 2;
}

// Login

message AuthenticationLoginRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationLoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

// Validate

message AuthenticationValidateRequest {
  string token = 1;
}

message AuthenticationValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}